--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ files/api_response_pointfinder.json
 files/api_response_query_trip.json
 files/api_response_trip_details.json
 
+files/linie11.json
+files/linie11.csv
 #files/local_source.csv
 #files/kuerzel_dresden.json
 #files/kuerzel_umland.json
@@ -13,6 +15,7 @@ files/api_response_trip_details.json
 files/local_static.json
 files/web_daily_json.json
 
+python/__pycache__/*
 
 documentation/*
 web/*
